grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.module_docstring,
      $.pragma_directive,
      $.import_statement,
      $.from_import_statement,
      $.struct_declaration,
      $.interface_declaration,
      $.event_declaration,
      $.enum_declaration,
      $.flag_declaration,
      $.uses_statement,
      $.initializes_statement,
      $.implements_statement,
      $.exports_declaration,
      $.function_definition,
      $.interface_stub_definition,
      $.constant_declaration,
      $.state_variable_declaration,
      $._newline,
    ),

    import_statement: $ => seq(
      "import",
      $.import_item,
      repeat(seq(",", $.import_item)),
      optional(","),
      $._newline,
    ),

    dotted_name: $ => sep1($.identifier, "."),

    import_item: $ => seq(
      $.dotted_name,
      optional(seq("as", $.identifier)),
    ),

    imported_type: $ => seq($.identifier, repeat1(seq(".", $.identifier))),

    event_declaration: $ => seq(
      "event",
      field("name", $.identifier),
      ":",
      choice(
        seq("pass", $._newline),
        declarationBody($, choice($.event_member, $.pass_statement)),
      ),
    ),

    event_member: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", choice($.indexed_type, $.type)),
      $._newline,
    ),


    implements_statement: $ => seq(
      "implements",
      ":",
      field("value", choice($.identifier, $.imported_type)),
      $._newline,
    ),

    constant_declaration: $ => seq(
      field("name", $.identifier),
      ":",
      choice(
        $.constant_type,
        seq("public", "(", $.constant_type, ")"),
      ),
      "=",
      field("value", $._value_expression),
      $._newline,
    ),

    constant_type: $ => seq(
      "constant",
      "(",
      optional($._soft_line_break),
      $.type,
      softBreakTail($),
      ")",
    ),

    variable_annotation: $ => seq(
      choice("public", "reentrant", "immutable", "transient"),
      "(",
      optional($._soft_line_break),
      field("value", choice($.variable_annotation, $.type)),
      softBreakTail($),
      ")",
    ),

    state_variable_declaration: $ => seq(
      field("name", $.identifier),
      ":",
      field("type", choice($.variable_annotation, $.type)),
      optional(seq("=", field("value", $._value_expression))),
      $._newline,
    ),

    function_definition: $ => seq(
      repeat(seq($.decorator, repeat($._newline))),
      $.function_signature,
      ":",
      $.block,
    ),

    function_signature: $ => seq(
      "def",
      field("name", $.identifier),
      "(",
      optional($.parameter_list),
      optional($._soft_line_break_end),
      ")",
      optional(seq("->", field("return_type", $.type))),
    ),

    parameter_list: $ => prec.right(choice(
      commaSeparatedWithSoftBreaks($, $.parameter),
      multilineCommaSeparatedWithSoftBreaks($, $.parameter),
    )),

    decorator: $ => seq(
      "@",
      field("name", $.identifier),
      optional(seq("(", optional($.argument_list), optional($._soft_line_break_end), ")")),
      $._newline,
    ),

    parameter: $ => prec.right(choice(
      seq(
        field("name", $.identifier),
        repeat($._soft_line_break),
        ":",
        repeat($._soft_line_break),
        field("type", $.type),
        repeat($._soft_line_break),
        "=",
        repeat($._soft_line_break),
        field("default", $.expression),
      ),
      seq(
        field("name", $.identifier),
        repeat($._soft_line_break),
        ":",
        repeat($._soft_line_break),
        field("type", $.type),
      ),
    )),

    block: $ => seq(
      $._newline,
      repeat($._newline),
      $._indent,
      repeat1($.statement),
      $._dedent,
    ),

    pass_statement: $ => seq("pass", $._newline),

    return_statement: $ => choice(
      seq("return", $._newline),
      seq(
        "return",
        field("value", $.expression),
        ",",
        $._newline,
      ),
      seq(
        "return",
        field("value", $.expression),
        repeat1(seq(",", $.expression)),
        optional(","),
        $._newline,
      ),
      seq(
        "return",
        field("value", $.expression),
        $._newline,
      ),
    ),

    log_statement: $ => seq(
      "log",
      choice($.identifier, $.attribute, $.subscript),
      "(",
      optional($.argument_list),
      optional($._soft_line_break_end),
      ")",
      $._newline,
    ),

    assignment: $ => seq(
      field("left", choice($.assignment_target_list, $.expression)),
      "=",
      field("right", $._value_expression),
      $._newline,
    ),

    argument: $ => choice(
      $.keyword_argument,
      continuedExpression($),
    ),

    argument_list: $ => prec.right(choice(
      commaSeparatedWithSoftBreaks($, $.argument),
      multilineCommaSeparatedWithSoftBreaks($, $.argument),
    )),

    _value_expression: $ => choice(
      $.packed_tuple,
      $.expression,
    ),

    packed_tuple: $ => prec.right(1, packedExpressionSequence($)),

    parenthesized_expression: $ => choice(
      seq("(", continuedExpression($), ")"),
      seq(
        "(",
        repeat1($._soft_line_break),
        continuedExpression($),
        softBreakTail($),
        ")",
      ),
    ),

    binary_expression: $ => choice(
      ...[
        ["or", PREC.or],
        ["and", PREC.and],
        ["in", PREC.compare],
        ["==", PREC.compare],
        ["!=", PREC.compare],
        ["<", PREC.compare],
        ["<=", PREC.compare],
        [">", PREC.compare],
        [">=", PREC.compare],
        ["|", PREC.bitwise_or],
        ["^", PREC.bitwise_xor],
        ["&", PREC.bitwise_and],
        ["<<", PREC.shift],
        [">>", PREC.shift],
        ["+", PREC.additive],
        ["-", PREC.additive],
        ["*", PREC.multiplicative],
        ["//", PREC.multiplicative],
        ["/", PREC.multiplicative],
        ["%", PREC.multiplicative],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field("left", $.expression),
          field("operator", operator),
          field("right", $.expression),
        )),
      ),
      prec.right(PREC.power, seq(
        field("left", $.expression),
        field("operator", "**"),
        field("right", $.expression),
      )),
      prec.left(PREC.compare, seq(
        field("left", $.expression),
        field("operator", seq("not", "in")),
        field("right", $.expression),
      )),
    ),

    wrapped_binary_expression: $ => choice(
      ...[
        ["or", PREC.or],
        ["and", PREC.and],
        ["in", PREC.compare],
        ["==", PREC.compare],
        ["!=", PREC.compare],
        ["<", PREC.compare],
        ["<=", PREC.compare],
        [">", PREC.compare],
        [">=", PREC.compare],
        ["|", PREC.bitwise_or],
        ["^", PREC.bitwise_xor],
        ["&", PREC.bitwise_and],
        ["<<", PREC.shift],
        [">>", PREC.shift],
        ["+", PREC.additive],
        ["-", PREC.additive],
        ["*", PREC.multiplicative],
        ["//", PREC.multiplicative],
        ["/", PREC.multiplicative],
        ["%", PREC.multiplicative],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field("left", choice($.wrapped_binary_expression, $.expression)),
          repeat($._soft_line_break),
          field("operator", operator),
          repeat($._soft_line_break),
          field("right", choice($.wrapped_binary_expression, $.expression)),
        )),
      ),
      prec.right(PREC.power, seq(
        field("left", choice($.wrapped_binary_expression, $.expression)),
        repeat($._soft_line_break),
        field("operator", "**"),
        repeat($._soft_line_break),
        field("right", choice($.wrapped_binary_expression, $.expression)),
      )),
      prec.left(PREC.compare, seq(
        field("left", choice($.wrapped_binary_expression, $.expression)),
        repeat($._soft_line_break),
        field("operator", seq("not", "in")),
        repeat($._soft_line_break),
        field("right", choice($.wrapped_binary_expression, $.expression)),
      )),
    ),

    call: $ => prec(PREC.call, seq(
      field("function", $.atom_expression),
      "(",
      optional($.argument_list),
      optional($._soft_line_break_end),
      ")",
    )),

    external_call: $ => prec(PREC.unary, seq(
      field("kind", choice("extcall", "staticcall")),
      field("value", $.atom_expression),
    )),

    attribute: $ => prec.left(PREC.attribute, seq(
      field("value", $.atom_expression),
      ".",
      field("attribute", $.identifier),
    )),

    atom_expression: $ => choice(
      $.identifier,
      $.subscript,
      $.attribute,
      $.call,
      $.atom,
    ),

    atom: $ => choice(
      $.decimal,
      $.integer,
      $.hex_string,
      $.triple_quoted_string,
      $.prefixed_string,
      $.prefixed_byte_string,
      $.adjacent_string,
      $.string,
      $.boolean,
      $.ellipsis,
      $.list,
      $.tuple,
      alias($.multiline_tuple, $.tuple),
      $.dict,
      $.special_builtin,
      $.parenthesized_expression,
    ),

    hex_string: _ => token(choice(HEX_STRING_DOUBLE, HEX_STRING_SINGLE)),

    special_builtin: $ => choice(
      $.empty_builtin,
      $.abi_decode_builtin,
    ),

    empty_builtin: $ => seq(
      "empty",
      "(",
      optional($._soft_line_break),
      $.type,
      softBreakTail($),
      ")",
    ),

    tuple_type: $ => seq(
      "(",
      repeat($._soft_line_break),
      $.type,
      repeat(seq(optional($._soft_line_break), ",", repeat($._soft_line_break), $.type)),
      optional(seq(optional($._soft_line_break), ",")),
      softBreakTail($),
      ")",
    ),

    dyn_array_type: $ => prec(2, choice(
      seq(
        "DynArray",
        "[",
        $.type,
        ",",
        $.expression,
        optional(","),
        "]",
      ),
      seq(
        "DynArray",
        "[",
        repeat1($._soft_line_break),
        $.type,
        repeat($._soft_line_break),
        ",",
        repeat($._soft_line_break),
        $.expression,
        optional(seq(repeat($._soft_line_break), ",")),
        softBreakTail($),
        "]",
      ),
    )),

    hash_map_type: $ => prec(2, choice(
      seq(
        "HashMap",
        "[",
        $.type,
        ",",
        $.type,
        optional(","),
        "]",
      ),
      seq(
        "HashMap",
        "[",
        repeat1($._soft_line_break),
        $.type,
        repeat($._soft_line_break),
        ",",
        repeat($._soft_line_break),
        $.type,
        optional(seq(repeat($._soft_line_break), ",")),
        softBreakTail($),
        "]",
      ),
    )),

    bytes_type: $ => prec(2, choice(
      seq("Bytes", "[", $.expression, "]"),
      seq(
        "Bytes",
        "[",
        repeat1($._soft_line_break),
        $.expression,
        softBreakTail($),
        "]",
      ),
    )),

    subscripted_type: $ => prec(1, seq(
      $.identifier,
      "[",
      choice(
        seq(
          commaSep1(choice($.type, $.expression)),
          optional(","),
        ),
        seq(
          repeat1($._soft_line_break),
          choice($.type, $.expression),
          repeat(seq(optional($._soft_line_break), ",", repeat($._soft_line_break), choice($.type, $.expression))),
          optional(seq(optional($._soft_line_break), ",")),
          softBreakTail($),
        ),
      ),
      "]",
    )),

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
    decimal: _ => token(prec(2, choice(
      /\d[\d_]*\.\d[\d_]*([eE][+-]?\d[\d_]*)?/,
      /\d[\d_]*\.([eE][+-]?\d[\d_]*)?/,
      /\.\d[\d_]*([eE][+-]?\d[\d_]*)?/,
      /\d[\d_]*[eE][+-]?\d[\d_]*/,
    ))),
    integer: _ => token(choice(
      /0[xX][0-9A-Fa-f_]+/,
      /0[bB][01_]+/,
      /0[oO][0-7_]+/,
      /\d[\d_]*/,
    )),
    boolean: _ => choice("True", "False"),
    string: _ => token(choice(
      BYTE_STRING_DOUBLE,
      BYTE_STRING_SINGLE,
      STRING_DOUBLE,
      STRING_SINGLE,
    )),
  },
});
