test/corpus/multiline_tuple_return_type.txt
=========================
Multiline tuple return type
=========================

@internal
@view
def prep(swap: address) -> (
    uint256[2],
    uint256,
    uint256,
):
    return self._prep(swap)

---

(source_file
  (function_definition
    (decorator
      name: (identifier))
    (decorator
      name: (identifier))
    (function_signature
      name: (identifier)
      (parameter_list
        (parameter
          name: (identifier)
          type: (identifier)))
      return_type: (tuple_type
        (subscripted_type
          (identifier)
          (atom_expression
            (atom
              (integer))))
        (identifier)
        (identifier)))
    (block
      (return_statement
        (atom_expression
          (call
            function: (atom_expression
              (attribute
                value: (atom_expression
                  (identifier))
                attribute: (identifier)))
            (argument_list
              (argument
                (atom_expression
                  (identifier))))))))))
