test/corpus/wrapped_grouped_expressions.txt
=========================
Wrapped grouped expressions
=========================

@internal
def demo():
    self.inflation_params = (
        (extcall CRV20(CRV).future_epoch_time_write() << 216)
        + staticcall CRV20(CRV).rate()
    )

---

(source_file
  (function_definition
    (decorator
      name: (identifier))
    (function_signature
      name: (identifier))
    (block
      (assignment
        left: (atom_expression
          (attribute
            value: (atom_expression
              (identifier))
            attribute: (identifier)))
        right: (atom_expression
          (atom
            (parenthesized_expression
              (wrapped_binary_expression
                left: (atom_expression
                  (atom
                    (parenthesized_expression
                      (wrapped_binary_expression
                        left: (external_call
                          value: (atom_expression
                            (call
                              function: (atom_expression
                                (attribute
                                  value: (atom_expression
                                    (call
                                      function: (atom_expression
                                        (identifier))
                                      (argument_list
                                        (argument
                                          (atom_expression
                                            (identifier))))))
                                  attribute: (identifier))))))
                        right: (atom_expression
                          (atom
                            (integer)))))))
                right: (external_call
                  value: (atom_expression
                    (call
                      function: (atom_expression
                        (attribute
                          value: (atom_expression
                            (call
                              function: (atom_expression
                                (identifier))
                              (argument_list
                                (argument
                                  (atom_expression
                                    (identifier))))))
                          attribute: (identifier))))))))))))))
